fix swagger issues
